# trilogy-fastconnect

./: CMakeLists.txt  LICENSE  README.md
includes/: headers.hpp  plugin.hpp
source/: main.cpp
